mds: cleanup unneeded client_snap_caps when splitting snap inode

Fixes: http://tracker.ceph.com/issues/39987
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit df79944a773ee0d77babe343b0b7107d58e5a1cd)

Conflicts:
	src/mds/CInode.cc
	src/mds/MDCache.cc